--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,10 @@ name: PR total changes by christianncode
 description: Get the total number of changes in a pull request
 author: "Christian Díaz"
 inputs:
-  token:
+  GITHUB_TOKEN:
     description: "GitHub token with read access to the repository"
     required: true
-    default: "${{ secrets.GITHUB_TOKEN }}"
+    default: ""
 runs:
   using: "node20"
   main: "index.js"
